--- a/index.html
+++ b/index.html
@@ -6,43 +6,17 @@
 	<title>BC Georgist</title>
 	<link rel="stylesheet" href="format.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="insert-html.js"></script>
 </head>
 <body>
-	<!-- Image Banner -->
-	<div class="banner-container">
-		<img src="banners/Vancouver-horizon_cropped-wide-filtered.jpg" alt="BC Georgist Group" class="banner-image">
-		<div class="banner-text">BC Georgist Group</div>
-	</div>
-	<!-- Navigation bar -->
-	<div class="navbar" id="myNavbar">
-		<a href="index.html" class="active">BC Georgist Group</a>
-		<div class="dropdown">
-			<button class="dropbtn">Proposals
-				<i class="fa fa-caret-down"></i>
-			</button>
-			<div class="dropdown-content">
-				<a href="articles-html/BC-Georgist-Reform-Plan.html">BC Georgist Reform Plan</a>
-				<a href="articles-html/LVT-distribution-framework.html">LVT Distribution Framework</a>
-			</div>
-		</div>
-		<div class="dropdown">
-			<button class="dropbtn">Participate
-				<i class="fa fa-caret-down"></i>
-			</button>
-			<div class="dropdown-content">
-				<a href="https://www.meetup.com/vancouver-georgist-association/">Vancouver Meetup</a>
-				<a href="https://github.com/LiamM32/BC-Georgist">Github page</a>
-			</div>
-		</div>
-		<!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a> -->
-	</div>
 	<div id="header-container"></div>
 	<content>
 		<p>This website is part of an effort to organize Georgist activism in British Columbia. Currently, it is affiliated with a local group that meets in Vancouver called <i>Vancouver Georgist & Urbanist Association</i>, which is organized on Meetup.com.</p>
 		
 		<p>Here you will find policy proposals for either the province or individual municipalities. The purpose of this is to codify the goals of the Georgist movement in BC. If you are a British Columbian Georgist, you are encouraged to give feedback to the proposals. You may do this either at an in-person meeting with our Meetup group, or on GitHub.</p>
 		
-		<div class="row">
+		<div class="card-container">
 			<a class="link-card" href="https://www.meetup.com/vancouver-georgist-association/">
 				<!-- <a href="#" style="font-size: 64px; color: crimson" class="fa fa-meetup"></a> -->
 				<h3>Vancouver Georgist & Urbanist Association</h3>
