Various enhancements. Better mobile view.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=0.8">
 	<title>BC Georgist</title>
 	<link rel="stylesheet" href="format.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div id="header-container"></div>
-	<content>
+	<main>
 		<p>This website is part of an effort to organize Georgist activism in British Columbia. Currently, it is affiliated with a local group that meets in Vancouver called <i>Vancouver Georgist & Urbanist Association</i>, which is organized on Meetup.com.</p>
 		
 		<p>Here you will find policy proposals for either the province or individual municipalities. The purpose of this is to codify the goals of the Georgist movement in BC. If you are a British Columbian Georgist, you are encouraged to give feedback to the proposals. You may do this either at an in-person meeting with our Meetup group, or on GitHub.</p>
@@ -27,7 +27,7 @@
 				<p>A proposal for a tax shift towards land value tax and the introduction of a UBI. Intended to be the primary goal of the British Columbian Georgist movement. A work in progress. Input is encouraged.</p>
 			</a>
 		</div>
-	</content>
+	</main>
 	<footer>
 		Image credits:
 		<div><a href="https://www.flickr.com/photos/91994044@N00/52740846/in/set-1097365">Vancouver Horizon by Thomas Quine</a>, <a href="https://creativecommons.org/licenses/by/2.0/">CC BY 2.0</a></div>
